# TrainFlow

./: .env  .env.example  .gitignore  README.md  compose.yaml
docs/: EX3-notes.md  roadmap.md
docs/runbooks/: compose.md
interface/: .dockerignore  Dockerfile  app.py  client.py  coach.py  export.py  filters.py  metrics.py  permissions.py  pyproject.toml  ui_styles.py
interface/.streamlit/: config.toml
interface/tests/: test_coach.py  test_export.py  test_export_plan.py  test_filters.py  test_metrics.py  test_permissions.py  test_ui_styles.py
scripts/: Dockerfile  demo.sh  pyproject.toml  refresh.py
scripts/tests/: conftest.py  test_refresh.py
services/coach-service/: Dockerfile  README.md  pyproject.toml
services/coach-service/app/: auth.py  exercise_client.py  main.py  routes.py  schemas.py
services/coach-service/app/planner/: base.py  context.py  factory.py  fallback.py  gemini.py  llm.py  ollama.py  validation.py
services/coach-service/tests/: conftest.py  test_api.py  test_context.py  test_factory.py  test_fake_llm.py  test_fallback.py  test_gemini.py  test_ollama.py
services/exercise-service/: .gitignore  Dockerfile  pyproject.toml
services/exercise-service/app/: auth.py  auth_routes.py  db.py  main.py  models.py  plan_repository.py  plan_routes.py  repository.py  routes.py  seed.py  workout_repository.py  workout_routes.py
services/exercise-service/tests/: conftest.py  test_auth.py  test_exercises.py  test_history.py  test_plans.py
