[project]
name = "trainflow-interface"
version = "0.2.0"
description = "Streamlit interface for TrainFlow Exercise Catalog"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "pandas>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
