[project]
name = "trainflow-refresh"
version = "0.1.0"
description = "TrainFlow Redis-backed async refresh worker"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0,<6.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "anyio>=4.0.0,<5.0.0",
    "fakeredis>=2.20.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
