[project]
name = "trainflow-coach-service"
version = "0.1.0"
description = "TrainFlow Coach — AI-powered, history-aware workout planner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "pyjwt>=2.9.0,<3.0.0",
    "anthropic>=0.49.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
